--- a/index.html
+++ b/index.html
@@ -62,9 +62,20 @@
     <!-- Add more images as needed -->
   </div>
 
-  <audio autoplay loop>
-    <source src="./audio/mazhanila.mp3" type="audio/mpeg">
+  <audio id="bg-music" autoplay loop>
+    <source src="audio/mazhanila.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
+  
+  <script>
+    // Force play on page interaction for browsers that block autoplay
+    document.addEventListener('click', function () {
+      const audio = document.getElementById('bg-music');
+      if (audio.paused) {
+        audio.play();
+      }
+    });
+  </script>
+  
 </body>
 </html>
